--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <title>USGS Flow and AF Inflow</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
       max-width: 700px;
       margin: auto;
+      padding: 0 10px;
     }
     #flows {
       list-style: none;
@@ -27,6 +29,10 @@
       font-weight: bold;
       font-size: 1.3em;
     }
+    canvas {
+      width: 100% !important;
+      height: 250px !important;
+    }
   </style>
 </head>
 <body>
@@ -35,7 +41,7 @@
   <hr>
   <h2>AF Inflow: <span id="total">0</span> cfs</h2>
 
-  <canvas id="flowChart" width="600" height="300"></canvas>
+  <canvas id="flowChart"></canvas>
 
   <script>
     const siteIDs = [
@@ -50,53 +56,39 @@
     const totalEl = document.getElementById('total');
     const ctx = document.getElementById('flowChart').getContext('2d');
 
-    // For formatting numbers with commas and no decimals
     function formatFlow(value) {
       return Math.round(value).toLocaleString();
     }
 
-    // Time range for last 24 hours
     const now = new Date();
     const endDT = now.toISOString();
     const startDT = new Date(now.getTime() - 24*60*60*1000).toISOString();
 
-    // Fetch latest individual flows + 24h data for total chart
     Promise.all(siteIDs.map(id =>
       fetch(`https://waterservices.usgs.gov/nwis/iv/?format=json&sites=${id}&parameterCd=00060&startDT=${startDT}&endDT=${endDT}`)
         .then(res => res.json())
         .then(data => {
           const siteName = data.value.timeSeries[0].sourceInfo.siteName;
           const values = data.value.timeSeries[0].values[0].value;
-
-          // Latest flow (last reading)
           const latestFlow = parseFloat(values[values.length - 1].value);
-
-          // For chart, return site name & full 24h flow array
           const times = values.map(v => new Date(v.dateTime));
           const flows = values.map(v => parseFloat(v.value));
-
           return { siteName, latestFlow, times, flows };
         })
     )).then(sitesData => {
-      // Show individual latest flows
       flowsEl.innerHTML = '';
       let totalLatest = 0;
-      sitesData.forEach((site, i) => {
+      sitesData.forEach(site => {
         flowsEl.innerHTML += `<li>${site.siteName}: ${formatFlow(site.latestFlow)} cfs</li>`;
         totalLatest += site.latestFlow;
       });
 
-      // Insert horizontal line above total
       const hr = document.createElement('hr');
       flowsEl.parentNode.insertBefore(hr, totalEl.parentNode);
-
       totalEl.textContent = formatFlow(totalLatest);
 
-      // Prepare total flow (AF Inflow) over time by summing all sites at each timestamp
-      // Assuming timestamps align, use first site's times as labels
       const labels = sitesData[0].times.map(t => t.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'}));
       const totalFlows = [];
-
       for (let i = 0; i < labels.length; i++) {
         let sum = 0;
         sitesData.forEach(site => {
@@ -105,7 +97,9 @@
         totalFlows.push(Math.round(sum));
       }
 
-      // Create line chart with total only
+      const minFlow = Math.min(...totalFlows);
+      const maxFlow = Math.max(...totalFlows);
+
       new Chart(ctx, {
         type: 'line',
         data: {
@@ -114,23 +108,4 @@
             label: 'AF Inflow (cfs)',
             data: totalFlows,
             borderColor: 'rgb(54, 162, 235)',
-            backgroundColor: 'rgba(54, 162, 235, 0.2)',
-            fill: true,
-            tension: 0.3,
-            pointRadius: 0
-          }]
-        },
-        options: {
-          responsive: true,
-          scales: {
-            y: { beginAtZero: true, title: { display: true, text: 'Flow (cfs)' } },
-            x: { title: { display: true, text: 'Time (last 24h)' } }
-          },
-          interaction: { mode: 'nearest', axis: 'x', intersect: false },
-          plugins: { legend: { display: true } }
-        }
-      });
-    });
-  </script>
-</body>
-</html>
+            backgroundColor: 'transpar
