--- a/index.html
+++ b/index.html
@@ -62,50 +62,53 @@
 
     const now = new Date();
     const endDT = now.toISOString();
-    const startDT = new Date(now.getTime() - 24*60*60*1000).toISOString();
+    const startDT = new Date(now.getTime() - 24 * 60 * 60 * 1000).toISOString();
 
     Promise.all(siteIDs.map(id =>
       fetch(`https://waterservices.usgs.gov/nwis/iv/?format=json&sites=${id}&parameterCd=00060&startDT=${startDT}&endDT=${endDT}`)
         .then(res => res.json())
         .then(data => {
-          const siteName = data.value.timeSeries[0].sourceInfo.siteName;
-          const values = data.value.timeSeries[0].values[0].value;
-          const latestFlow = parseFloat(values[values.length - 1].value);
-          const times = values.map(v => new Date(v.dateTime));
-          const flows = values.map(v => parseFloat(v.value));
-          return { siteName, latestFlow, times, flows };
+          try {
+            const ts = data.value.timeSeries;
+            if (!ts || ts.length === 0) return null;
+            const siteName = ts[0].sourceInfo.siteName;
+            const values = ts[0].values[0].value;
+            if (!values || values.length === 0) return null;
+
+            let latestFlow = null;
+            for (let i = values.length - 1; i >= 0; i--) {
+              if (values[i].value !== null && values[i].value !== undefined && values[i].value !== '') {
+                latestFlow = parseFloat(values[i].value);
+                break;
+              }
+            }
+            if (latestFlow === null) return null;
+
+            const times = values.map(v => new Date(v.dateTime));
+            const flows = values.map(v => {
+              let val = parseFloat(v.value);
+              return isNaN(val) ? 0 : val;
+            });
+
+            return { siteName, latestFlow, times, flows };
+          } catch (e) {
+            console.warn('Error parsing data for site:', id, e);
+            return null;
+          }
         })
-    )).then(sitesData => {
+        .catch(err => {
+          console.warn('Fetch error for site:', id, err);
+          return null;
+        })
+    )).then(sitesDataRaw => {
+      const sitesData = sitesDataRaw.filter(d => d !== null);
+      if (sitesData.length === 0) {
+        flowsEl.innerHTML = '<li>No valid data available.</li>';
+        totalEl.textContent = '0';
+        return;
+      }
+
       flowsEl.innerHTML = '';
       let totalLatest = 0;
       sitesData.forEach(site => {
         flowsEl.innerHTML += `<li>${site.siteName}: ${formatFlow(site.latestFlow)} cfs</li>`;
-        totalLatest += site.latestFlow;
-      });
-
-      const hr = document.createElement('hr');
-      flowsEl.parentNode.insertBefore(hr, totalEl.parentNode);
-      totalEl.textContent = formatFlow(totalLatest);
-
-      const labels = sitesData[0].times.map(t => t.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'}));
-      const totalFlows = [];
-      for (let i = 0; i < labels.length; i++) {
-        let sum = 0;
-        sitesData.forEach(site => {
-          sum += site.flows[i] || 0;
-        });
-        totalFlows.push(Math.round(sum));
-      }
-
-      const minFlow = Math.min(...totalFlows);
-      const maxFlow = Math.max(...totalFlows);
-
-      new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels,
-          datasets: [{
-            label: 'AF Inflow (cfs)',
-            data: totalFlows,
-            borderColor: 'rgb(54, 162, 235)',
-            backgroundColor: 'transpar
