--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     }
     canvas {
       max-width: 100%;
+      height: 300px !important;
     }
     @media (max-width: 600px) {
       .flow-data {
@@ -29,28 +30,28 @@
   <h2>USGS Flow Data</h2>
   <div class="flow-data" id="flowData"></div>
   <br><br>
-  <canvas id="flowChart" height="200"></canvas>
+  <canvas id="flowChart"></canvas>
 
   <script>
     const siteIDs = {
-      '12389000': 'Clark Fork @ Plains      ',
-      '12389500': 'Thompson River           ',
-      '12390700': 'Prospect Creek           ',
-      '12392155': 'Lightning Creek          ',
-      '12395000': 'Priest River             '
+      '12389000': 'Clark Fork @ Plains     ',
+      '12389500': 'Thompson River          ',
+      '12390700': 'Prospect Creek          ',
+      '12392155': 'Lightning Creek         ',
+      '12395000': 'Priest River            '
     };
 
     async function fetchFlow(site) {
-      const response = await fetch(`https://waterservices.usgs.gov/nwis/iv/?sites=${site}&parameterCd=00060&siteStatus=all&format=json`);
-      const json = await response.json();
+      const res = await fetch(`https://waterservices.usgs.gov/nwis/iv/?sites=${site}&parameterCd=00060&siteStatus=all&format=json`);
+      const json = await res.json();
       const values = json.value.timeSeries[0]?.values[0]?.value || [];
       const last = values[values.length - 1];
       return last ? parseFloat(last.value) : 0;
     }
 
     async function fetchChartData(site) {
-      const response = await fetch(`https://waterservices.usgs.gov/nwis/iv/?sites=${site}&parameterCd=00060&siteStatus=all&format=json`);
-      const json = await response.json();
+      const res = await fetch(`https://waterservices.usgs.gov/nwis/iv/?sites=${site}&parameterCd=00060&siteStatus=all&format=json`);
+      const json = await res.json();
       const values = json.value.timeSeries[0]?.values[0]?.value || [];
       return values.map(v => ({ x: new Date(v.dateTime), y: parseFloat(v.value) }));
     }
@@ -68,64 +69,6 @@
         text += `${name}: ${flow.toLocaleString(undefined, { maximumFractionDigits: 0 })} cfs\n`;
       }
 
+      // Pack River calculation
       const packFlow = Math.round(1.15 * priestFlow - 45);
-      totalFlow += packFlow;
-      text += `Pack River (calculated)   : ${packFlow.toLocaleString()} cfs\n`;
-      text += '------------------------------\n';
-      text += `AF Inflow: ${totalFlow.toLocaleString()} cfs`;
-
-      flowData.textContent = text;
-      return { totalFlow, priestFlow };
-    }
-
-    async function drawChart(priestFlow) {
-      const data = await fetchChartData('12395000');
-      const chartData = data.map(point => ({
-        x: point.x,
-        y: Math.round(1.15 * point.y - 45)
-      }));
-
-      const yValues = chartData.map(p => p.y);
-      const yMax = Math.ceil((Math.max(...yValues) + 100) / 100) * 100;
-      const yMin = Math.floor((Math.min(...yValues) - 100) / 100) * 100;
-
-      new Chart(document.getElementById('flowChart').getContext('2d'), {
-        type: 'line',
-        data: {
-          datasets: [{
-            label: 'AF Inflow',
-            data: chartData,
-            borderColor: 'blue',
-            borderWidth: 2,
-            pointRadius: 0,
-            fill: false
-          }]
-        },
-        options: {
-          responsive: true,
-          maintainAspectRatio: false,
-          scales: {
-            x: { type: 'time', time: { unit: 'hour' } },
-            y: {
-              beginAtZero: false,
-              min: yMin,
-              max: yMax,
-              ticks: {
-                callback: value => value.toLocaleString()
-              }
-            }
-          },
-          plugins: {
-            legend: { display: false }
-          }
-        }
-      });
-    }
-
-    (async () => {
-      const { priestFlow } = await updateFlowData();
-      await drawChart(priestFlow);
-    })();
-  </script>
-</body>
-</html>
+      totalFlo
