--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     const flowsEl = document.getElementById('flows');
     const totalEl = document.getElementById('total');
     const ctx = document.getElementById('flowChart').getContext('2d');
+    let chart = null;
 
     function formatFlow(value) {
       return Math.round(value).toLocaleString();
@@ -107,56 +108,81 @@
       return Math.floor(num / 100) * 100;
     }
 
-    const now = new Date();
-    const endDT = now.toISOString();
-    const startDT = new Date(now.getTime() - 24 * 60 * 60 * 1000).toISOString();
+    async function fetchDataAndUpdate() {
+      const now = new Date();
+      const endDT = now.toISOString();
+      const startDT = new Date(now.getTime() - 24 * 60 * 60 * 1000).toISOString();
 
-    Promise.all(siteIDs.map(id =>
-      fetch(`https://waterservices.usgs.gov/nwis/iv/?format=json&sites=${id}&parameterCd=00060&startDT=${startDT}&endDT=${endDT}`)
-        .then(res => res.json())
-        .then(data => {
-          const ts = data.value.timeSeries;
-          if (!ts || ts.length === 0) return null;
-          const rawName = ts[0].sourceInfo.siteName;
-          const values = ts[0].values[0].value;
-          if (!values || values.length === 0) return null;
+      const sitesDataRaw = await Promise.all(siteIDs.map(id =>
+        fetch(`https://waterservices.usgs.gov/nwis/iv/?format=json&sites=${id}&parameterCd=00060&startDT=${startDT}&endDT=${endDT}`)
+          .then(res => res.json())
+          .then(data => {
+            const ts = data.value.timeSeries;
+            if (!ts || ts.length === 0) return null;
+            const rawName = ts[0].sourceInfo.siteName;
+            const values = ts[0].values[0].value;
+            if (!values || values.length === 0) return null;
 
-          let latestFlow = null;
-          let latestIndex = null;
-          for (let i = values.length - 1; i >= 0; i--) {
-            if (values[i].value !== null && values[i].value !== undefined && values[i].value !== '') {
-              latestFlow = parseFloat(values[i].value);
-              latestIndex = i;
-              break;
+            let latestFlow = null;
+            let latestIndex = null;
+            for (let i = values.length - 1; i >= 0; i--) {
+              if (values[i].value !== null && values[i].value !== undefined && values[i].value !== '') {
+                latestFlow = parseFloat(values[i].value);
+                latestIndex = i;
+                break;
+              }
             }
-          }
-          if (latestFlow === null) return null;
+            if (latestFlow === null) return null;
 
-          const times = values.map(v => new Date(v.dateTime));
-          const flows = values.map(v => {
-            let val = parseFloat(v.value);
-            return isNaN(val) ? 0 : val;
-          });
+            const times = values.map(v => new Date(v.dateTime));
+            const flows = values.map(v => {
+              let val = parseFloat(v.value);
+              return isNaN(val) ? 0 : val;
+            });
 
-          const siteName = siteNames[id] || rawName;
+            const siteName = siteNames[id] || rawName;
 
-          return { siteName, latestFlow, latestIndex, times, flows };
-        })
-        .catch(() => null)
-    )).then(sitesDataRaw => {
+            return { siteName, latestFlow, latestIndex, times, flows };
+          })
+          .catch(() => null)
+      ));
+
       const sitesData = sitesDataRaw.filter(d => d !== null);
       if (sitesData.length === 0) {
         flowsEl.innerHTML = '<li>No valid data available.</li>';
         totalEl.textContent = '0';
+        if(chart) chart.destroy();
         return;
       }
 
       flowsEl.innerHTML = '';
       let totalLatest = 0;
+      let priestFlow = 0;
+      let priestSite = null;
+
+      const otherSites = [];
       sitesData.forEach(site => {
+        if (site.siteName === 'Priest River') {
+          priestFlow = site.latestFlow;
+          priestSite = site;
+        } else {
+          otherSites.push(site);
+        }
+      });
+
+      otherSites.forEach(site => {
         flowsEl.innerHTML += `<li><span class="site-name">${site.siteName}</span><span class="flow-value">${formatFlow(site.latestFlow)}</span><span class="unit">cfs</span></li>`;
         totalLatest += site.latestFlow;
       });
+
+      const packFlow = Math.round(1.15 * priestFlow - 45);
+      flowsEl.innerHTML += `<li><span class="site-name">Pack River (calculated)</span><span class="flow-value">${formatFlow(packFlow)}</span><span class="unit">cfs</span></li>`;
+      totalLatest += packFlow;
+
+      if (priestSite) {
+        flowsEl.innerHTML += `<li><span class="site-name">${priestSite.siteName}</span><span class="flow-value">${formatFlow(priestSite.latestFlow)}</span><span class="unit">cfs</span></li>`;
+        totalLatest += priestSite.latestFlow;
+      }
 
       if (!flowsEl.nextElementSibling || flowsEl.nextElementSibling.tagName !== 'HR') {
         const hr = document.createElement('hr');
@@ -173,16 +199,22 @@
       const totalFlows = [];
       for (let i = 0; i <= minLatestIndex; i++) {
         let sum = 0;
+        let priestVal = 0;
         sitesData.forEach(site => {
           sum += site.flows[i] || 0;
+          if (site.siteName === 'Priest River') priestVal = site.flows[i] || 0;
         });
+        const packVal = Math.round(1.15 * priestVal - 45);
+        sum += packVal;
         totalFlows.push(Math.round(sum));
       }
 
       const minFlow = Math.min(...totalFlows);
       const maxFlow = Math.max(...totalFlows);
 
-      new Chart(ctx, {
+      if(chart) chart.destroy();
+
+      chart = new Chart(ctx, {
         type: 'line',
         data: {
           labels,
@@ -203,7 +235,10 @@
               beginAtZero: false,
               min: Math.max(0, roundDownToNearest100(minFlow - 100)),
               max: roundUpToNearest100(maxFlow + 100),
-              title: { display: true, text: 'Flow (cfs)' }
+              title: { display: true, text: 'Flow (cfs)' },
+              ticks: {
+                callback: val => Math.round(val).toLocaleString()
+              }
             },
             x: {
               title: { display: true, text: 'Time (last 24h)' }
@@ -213,7 +248,13 @@
           plugins: { legend: { display: true } }
         }
       });
-    });
+    }
+
+    // Initial load
+    fetchDataAndUpdate();
+
+    // Refresh every 5 minutes (300000 ms)
+    setInterval(fetchDataAndUpdate, 300000);
   </script>
 </body>
 </html>
